clôture site 1 de test, commencement site pro

--- a/v1/contact.html
+++ b/v1/contact.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Moumou Land - Contact</title>
+    <title>Moumou Land</title>
     <meta charset="utf8">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/logo-icon.webp" sizes="32x32">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Rock+3D&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="ban">
@@ -16,7 +15,7 @@
     <nav class="menu-index">
         <ul>
             <li class="btn"><a href="index.html">Accueil</a></li>
-            <li class="btn"><a href="forum.html">Le coin des intimes</a></li>
+            <li class="btn"><a href="forum.html">Forum</a></li>
             <li class="btn"><a href="contact.html">Contact</a></li>
         </ul>
 
@@ -27,7 +26,7 @@
     <label class="text_send_title">Ecrivez moi vos critiques constructives :</label><br>
     <textarea id="zoneTexte" name="zoneTexte" style="width: 300px; height: 200px;"></textarea>
     <br>
-    <button type="submit" class="btn_send" title="Ca s'enverra pas, parce que j'en ai rien à foutre">Envoyer</button>
+    <button type="submit" class="btn_send" title="Ca ne s'enverra pas, parce que je l'ai pas encore codé">Envoyer</button>
     
     
     <div class="coord">
