--- a/v1/forum.html
+++ b/v1/forum.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Moumou Land - Forum</title>
+    <title>Moumou Land</title>
     <meta charset="utf8">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/logo-icon.webp" sizes="32x32">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Rock+3D&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="ban">
@@ -17,7 +16,7 @@
     <nav class="menu-index">
         <ul>
             <li class="btn"><a href="index.html">Accueil</a></li>
-            <li class="btn"><a href="forum.html">Le coin des intimes</a></li>
+            <li class="btn"><a href="forum.html">Forum</a></li>
             <li class="btn"><a href="contact.html">Contact</a></li>
         </ul>
 
@@ -25,7 +24,7 @@
 
     <main id="forum">
         <div class="left">
-        <p>Ici vous pourrez bientôt discuter et lire des exclusivités</p>
+        <p>Espace forum à développer</p>
         <p class="element">
         <svg class="rounded-full group-hover:brightness-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M2.24283 6.85419L11.4895 1.30843C11.8062 1.11848 12.2019 1.11855 12.5185 1.30862L21.7573 6.85416C21.9079 6.94453 22 7.10726 22 7.28286V19.9998C22 20.5521 21.5523 20.9998 21 20.9998H3C2.44772 20.9998 2 20.5521 2 19.9998V7.28298C2 7.10732 2.09218 6.94454 2.24283 6.85419ZM18.3456 8.24367L12.0606 13.6827L5.64722 8.23752L4.35278 9.76213L12.0731 16.3169L19.6544 9.75599L18.3456 8.24367Z" fill="rgba(253,253,253,1)"></path></svg>
         </p>
