--- a/v1/index.html
+++ b/v1/index.html
@@ -5,9 +5,8 @@
         <meta charset="utf8">
         <link rel="icon" type="image/png" href="img/logo-icon.webp" sizes="32x32">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Rock+3D&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="ban">
@@ -16,16 +15,16 @@
         <nav class="menu-index">
             <ul>
                 <li class="btn"><a href="index.html">Accueil</a></li>
-                <li class="btn"><a href="forum.html">Le coin des intimes</a></li>
+                <li class="btn"><a href="forum.html">Forum</a></li>
                 <li class="btn"><a href="contact.html">Contact</a></li>
             </ul>
 
         </nav>
         <main id="index">
             <section class ="left">
-                <h1><img src="img/prière.png" width="20">BIENVENUE<img src="img/prière.png" width="20"></h1>
-                    <p class="intro">Soyez bénis par la grâce du Moumou suprême </p>
-                    <a href="https://chat.openai.com/" target="_BLANK"> Cliquez pour consulter le divin guide</a>
+                <h1><img src="https://cdn-icons-png.flaticon.com/512/1601/1601243.png" width="20">BIENVENUE<img src="https://cdn-icons-png.flaticon.com/512/1601/1601243.png" width="20"></h1>
+                    <p class="intro">Exemple de texte </p>
+                    <a href="https://chat.openai.com/" target="_BLANK"> Cliquez pour consulter le guide</a>
                     <br><br>
                     <img class="chat" src="https://i.pinimg.com/564x/87/02/89/870289bb3fa569a116d57058be86ba50.jpg" width="300">
             </section>
